[project]
name = "vexen-core"
version = "0.1.0"
description = "Integration layer for Vexen systems (user, rbac, auth)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "vexen-user>=0.1.3",
    "vexen-rbac>=0.1.3",
    "vexen-auth>=0.1.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C", "B"]
ignore = ["E501", "W191"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
